force-app/main/default/objects/KimbleOne__PlanItemDependency__c/KimbleOne__PlanItemDependency__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Plan Item Dependency</label>
    <nameField>
        <label>Plan Item Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Item Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>