force-app/main/default/objects/KimbleOne__PlanItemDependency__c/fields/KimbleOne__DependencyType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DependencyType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependency Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>PlanItemDependencyType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Plan Item Dependencies</relationshipLabel>
    <relationshipName>PlanItemDependencies</relationshipName>
    <type>Lookup</type>
</CustomField>