force-app/main/default/objects/KimbleOne__PlanItemDependency__c/fields/KimbleOne__PlanItemPredecessor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanItemPredecessor__c</fullName>
    <label>Predecessor</label>
    <referenceTo>KimbleOne__PlanItem__c</referenceTo>
    <relationshipLabel>Plan Item Dependencies</relationshipLabel>
    <relationshipName>PlanItemDependenciesPredecessor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>