force-app/main/default/objects/KimbleOne__PlanItemDependency__c/fields/KimbleOne__PlanItemSuccessor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanItemSuccessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor</label>
    <referenceTo>KimbleOne__PlanItem__c</referenceTo>
    <relationshipLabel>Plan Item Dependencies (Plan Item Successor)</relationshipLabel>
    <relationshipName>PlanItemDependenciesSuccessor</relationshipName>
    <type>Lookup</type>
</CustomField>