force-app/main/default/objects/KimbleOne__PlanItemDependency__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__PlanItemPredecessor__c</columns>
    <columns>KimbleOne__PlanItemSuccessor__c</columns>
    <columns>KimbleOne__DependencyType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>